# fastapi_zero

./: .gitignore  README.md  pyproject.toml
fastapi_zero/: app.py  models.py
migrations/: env.py
migrations/versions/: 07ad888184f0_add_updated_at_to_users.py  2ddd3e93ef0d_create_users_table.py
tests/: conftest.py  test_app.py  test_database_session.py  test_db.py
